vacancies page alignment bug fix

--- a/src/app/vacancies/page.module.css
+++ b/src/app/vacancies/page.module.css
@@ -2,7 +2,7 @@
   padding-inline: 5%;
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   position: relative;
 }
 
@@ -19,9 +19,17 @@
   background-size: cover;
   z-index: -10;
 }
+
+.main-content {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .title-block {
   display: flex;
   flex-direction: column;
+  align-self: flex-start;
   gap: 10px;
   margin-top: 110px;
   margin-bottom: 30px;
